--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,20 @@
+[build.environment]
+  NETLIFY_USE_YARN = "true"
+  YARN_VERSION = "1.22.17"
+
 [build]
-  publish = "."  # Indica che i file si trovano nella root del progetto
-  command = ""   # Lascia vuoto se non hai bisogno di un comando di build
+  command = "yarn build"
+  publish = "dist"
+
+[context.deploy-preview]
+  command = "yarn build:preview"
+
+[dev]
+  framework = "gjdev"
+  targetPort = 3000
+
+[[plugins]]
+  package = "netlify-plugin-cypress"
+
+  [plugins.inputs]
+    record = true
